--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
   "TUTORIAL_CONTINUE_BUTTON" : "Continue",
 
   "TUTORIAL_SLIDE1_TITLE": "UAE VAT Guide",
-  "TUTORIAL_SLIDE1_DESCRIPTION": "The <b>Ionic Super Starter</b> is a fully-featured Ionic starter with many pre-built pages and best practices.",
+  "TUTORIAL_SLIDE1_DESCRIPTION": "The UAE is implementing Value Added Tax (VAT) starting 2018. Are you ready?",
 
   "TUTORIAL_SLIDE2_TITLE": "How to use the Super Starter",
   "TUTORIAL_SLIDE2_DESCRIPTION": "Assemble the various page types you want and remove the ones you don't. We've provided many common mobile app page layouts, like login and signup pages, tabs, and this tutorial page.",
